@@ -25,6 +25,8 @@
 #undef HAVE_COMPAREIMAGECHANNELS
 /* Introduced in IM 6.2.6 */
 #undef HAVE_COMPAREIMAGELAYERS
+/* Introduced in IM 6.2.6 */
+#undef HAVE_CONTRASTSTRETCHIMAGECHANNEL
 /* Introduced in IM 6.0.1 */
 #undef HAVE_CONVOLVEIMAGECHANNEL
 /* Introduced in IM 5.5.7, GM 1.1 */
