@@ -7,6 +7,8 @@ RMagick 1.11.0
       (bug report from Ryan Davis)
     o Added --disable-htmldoc option to setup.rb
     o Fix bug #4104, incorrect label on example (reported by Jason Lee)
+    o Added contrast_stretch_channel to the Image class (available with
+      ImageMagick 6.2.6)
 
 RMagick 1.10.1
     o Fix bug #3437, memory leak in ImageList#to_blob
